--- a/_config.yml
+++ b/_config.yml
@@ -109,7 +109,7 @@ analytics:
 author:
   name             : "Mr. Quang-Duy NGUYEN"
   avatar           : "/images/duy.png"
-  bio              : "Quang-Duy NGUYEN was born in Hoàn-Kiém district, Hanoi, Vietnam. He completed his Computer Engineering's degree at Hanoi University of Science and Technology in 2012. He obtained his master's diploma in Communication Systems and Networking (Master SIR) from the University Claude Bernard Lyon 1 in 2015. He started his PhD in January 2017 at the Technologies and Information Systems for Agrosystems (TSCF) research unit in the IRSTEA centre Clermont-Ferrand, France, under the supervision of Dr. Jean-Pierre CHANET (Irstea), Dr. Catherine ROUSSEY (Irstea) and Dr. Christophe de VAULX (Limos). He interests in building complex systems using novel technologies in the domains of Embedded System, Wireless Sensor Network (WSN), Ontology and Reasoning System. He is working on the project ConnecSens to develop an adaptive context-aware irrigation system for the AgrotechnoPôle in the Auvergne-Rhône-Alpes region."
+	bio 						 : "Quang-Duy NGUYEN was born in Hanoi, Vietnam. He is a PhD student at TSCF, INRAE in Clermont-Ferrand, France." 
   location         : "Clermont-Ferrand, France"
   email            : "quang-duy.nguyen@inrae.fr"
   links:
