--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
 # main links
 main:
-#  - title: "About"
-#    url: /about/
+  - title: "Bio"
+    url: /bio/
   - title: "Education"
     url: /education/
   - title: "Publication"
