--- a/_config.yml
+++ b/_config.yml
@@ -132,7 +132,7 @@ author:
       icon: "fab fa-fw fa-instagram"
       # url: "https://instagram.com/"
     - label: "ORCID"
-      icon: "/images/orcid.png"
+      icon: "fab fa-fw fa-orcid"
       url: "https://orcid.org/0000-0002-3517-0945"
 
 # Site Footer
