add link to location

--- a/_config.yml
+++ b/_config.yml
@@ -113,6 +113,9 @@ author:
   location         : "Clermont-Ferrand, France"
   email            : "quang-duy.nguyen@inrae.fr"
   links:
+    - label: "Location"
+      icon: "fab fa-fw fa-map-marker-alt"
+      url: "https://www.inrae.fr/centres/clermont-auvergne-rhone-alpes"
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
       # url: mailto:your.name@email.com
