--- a/_config.yml
+++ b/_config.yml
@@ -109,7 +109,7 @@ analytics:
 author:
   name             : "Mr. Quang-Duy NGUYEN"
   avatar           : "/images/duy.png"
-  bio              : "Quang-Duy NGUYEN was born in Hanoi, Vietnam. He is a PhD student at TSCF, INRAE in Clermont-Ferrand, France."
+  bio              : "I especially like the phrase ''Stay hungry. Stay foolish.'' of Steve Jobs, because I really am a fool who always feel hungry."
   location         : "Clermont-Ferrand, France"
   email            : "quang-duy.nguyen@inrae.fr"
   links:
