--- a/_config.yml
+++ b/_config.yml
@@ -134,6 +134,12 @@ author:
     - label: "ORCID"
       icon: "fab fa-fw fa-orcid"
       url: "https://orcid.org/0000-0002-3517-0945"
+    - label: "Google scholar"
+      icon: "fab fa-fw fa-link"
+      url: "https://scholar.google.fr/citations?user=yMXCWm0AAAAJ&hl=fr"
+    - label: "Scopus"
+      icon: "fab fa-fw fa-link"
+      url: "https://www.scopus.com/authid/detail.uri?authorId=57190120717"
 
 # Site Footer
 footer:
