--- a/.htaccess
+++ b/.htaccess
@@ -1,1 +1,6 @@
-Redirect 301 / https://nguyen.quang-duy.me
+#Redirect 301 / https://nguyen.quang-duy.me
+AuthUserFile .htpasswd
+AuthGroupFile /dev/null
+AuthName "Secure Document"
+AuthType Basic
+require user sncf
