--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@
 
 # theme                  : "minimal-mistakes-jekyll"
 # remote_theme           : "mmistakes/minimal-mistakes"
-minimal_mistakes_skin    : "dark" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise", "default"
+minimal_mistakes_skin    : "air" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise", "default"
 
 # Site Settings
 locale                   : "en-US"
@@ -109,7 +109,7 @@ analytics:
 author:
   name             : "Dr. Quang-Duy NGUYEN"
   avatar           : "/images/duy.png"
-  bio              : "Stay hungry. Stay foolish. Sometimes Funny. Always Coolest."
+  bio              : "Stay hungry. Stay foolish. Sometimes funny. Always coolest."
   location         : "Palaiseau, France"
   email            : "quanguyen@telecom-paris.fr"
   links:
