--- a/_config.yml
+++ b/_config.yml
@@ -107,7 +107,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "Dr. Quang-Duy NGUYEN"
+  name             : "Quang-Duy NGUYEN, PhD"
   avatar           : "/images/duy.png"
   bio              : "Stay hungry. Stay foolish. Sometimes funny. Always coolest."
   location         : "Palaiseau, France"
