--- a/_config.yml
+++ b/_config.yml
@@ -109,7 +109,7 @@ analytics:
 author:
   name             : "Quang-Duy NGUYEN, PhD"
   avatar           : "/images/duy.png"
-  bio              : "Stay hungry. Stay foolish. Sometimes funny. Always coolest."
+  bio              : "Pursue purpose, NOT comfort."
   location         : "Palaiseau, France"
   email            : "quanguyen@telecom-paris.fr"
   links:
