--- a/_config.yml
+++ b/_config.yml
@@ -111,7 +111,7 @@ author:
   avatar           : "/images/duy.png"
   bio              : "Pursue purpose, NOT comfort."
   location         : "Palaiseau, France"
-  email            : "quanguyen@telecom-paris.fr"
+  email            : "quang-duy.nguyen@cea.fr"
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
